# patrickt.github.io

./: .gitignore  .gitmodules  CHANGELOG.md  CNAME  Filters.hs  LICENSE.md  Main.hs  README.md  about.html  about.org  archive.html  atom.xml  cabal.project  cabal.project.freeze  cabal.project.local  contact.html  contact.org  et-book  fluent-polymorphism-with-visible-type-applications  index.html  organic.cabal  stylesheet.css
an-introduction-to-recursion-schemes/: index.html
css/: solarized.css  tomorrow-night.css
fluent-polymorphism-with-visible-type-applications/: index.html
posts/: bazel-haskell-build-system-joy.html  bazel-haskell-build-system-joy.org  emacs-config.html  emacs-config.org  emacs-config.org.metadata  emacs.org  existential-haskell.html  existential-haskell.org  existential-haskell.org.metadata  fast-iteration-with-haskell.html  fast-iteration-with-haskell.org  fluent-polymorphism-type-applications.html  fluent-polymorphism-type-applications.org  introduction-to-recursion-schemes.html  introduction-to-recursion-schemes.org  introduction-to-recursion-schemes.org.metadata  ode-to-a-streaming-bytestream.html  ode-to-a-streaming-bytestream.org  ode-to-a-streaming-bytestream.org.metadata  recursion-schemes-ch-1.html  recursion-schemes-part-2.html  recursion-schemes-part-2.org  recursion-schemes-part-2.org.metadata  recursion-schemes-part-3.html  recursion-schemes-part-3.org  recursion-schemes-part-3.org.metadata  recursion-schemes-part-4-point-5.html  recursion-schemes-part-4-point-5.org  recursion-schemes-part-4-point-5.org.metadata  recursion-schemes-part-4.html  recursion-schemes-part-4.org  recursion-schemes-part-4.org.metadata  recursion-schemes-part-5.html  (+8 more)
templates/: default.html  (+1 more)
(+7 files in other folders)
