cabal-version:       3.0

name:                organic
version:             0.1.0.0
license:             GPL-3.0-or-later
license-file:        LICENSE.md
author:              Patrick Thomson
maintainer:          patrickt@github.com
copyright:           2019 Patrick Thomson
build-type:          Simple

executable organic
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>= 4.12
                     , hakyll ^>= 4.13
  -- hs-source-dirs:
  default-language:    Haskell2010
