cabal-version:       3.0

name:                organic
version:             0.1.0.0
license:             GPL-3.0-or-later
license-file:        LICENSE.md
author:              Patrick Thomson
maintainer:          patrickt@github.com
copyright:           2019 Patrick Thomson
build-type:          Simple

common shared
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

executable organic
  import:              shared
  main-is:             Main.hs
  other-modules:       Filters
  -- other-extensions:
  build-depends:       base
                     , hakyll
                     , text
                     , pandoc
                     , pandoc-types
  -- hs-source-dirs:
  default-language:    Haskell2010
